Sign install script

--- a/CredentialProvider.Microsoft/CredentialProvider.Microsoft.csproj
+++ b/CredentialProvider.Microsoft/CredentialProvider.Microsoft.csproj
@@ -44,5 +44,6 @@
     <FilesToSign Include="$(OutDir)$(TargetFileName)" Authenticode="Microsoft400" StrongName="StrongName" />
     <FilesToSign Include="$(IntermediateOutputPath)$(TargetFileName)" Authenticode="Microsoft400" StrongName="StrongName" />
     <FilesToSign Include="$(IntermediateOutputPath)apphost.exe" Condition=" '$(UseAppHost)' == 'true' " Authenticode="Microsoft400" />
+    <FilesToSign Include="$([System.IO.Path]::Combine($(MSBuildProjectDirectory), `helpers`, `installcredprovider.ps1`))" Authenticode="Microsoft400" StrongName="StrongName" />
   </ItemGroup>
 </Project>
