--- a/CredentialProvider.Microsoft/CredentialProvider.Microsoft.csproj
+++ b/CredentialProvider.Microsoft/CredentialProvider.Microsoft.csproj
@@ -41,9 +41,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildProjectDirectory), Build.props))\helpers\installcredprovider.ps1" CopyToOutputDirectory="PreserveNewest" />
+  </ItemGroup>
+
+  <ItemGroup>
     <FilesToSign Include="$(OutDir)$(TargetFileName)" Authenticode="Microsoft400" StrongName="StrongName" />
+    <FilesToSign Include="$(OutDir)\installcredprovider.ps1" Authenticode="Microsoft400" />
     <FilesToSign Include="$(IntermediateOutputPath)$(TargetFileName)" Authenticode="Microsoft400" StrongName="StrongName" />
     <FilesToSign Include="$(IntermediateOutputPath)apphost.exe" Condition=" '$(UseAppHost)' == 'true' " Authenticode="Microsoft400" />
-    <FilesToSign Include="$([System.IO.Path]::Combine($(MSBuildProjectDirectory), `helpers`, `installcredprovider.ps1`))" Authenticode="Microsoft400" StrongName="StrongName" />
   </ItemGroup>
 </Project>
